Modified Blog display based on Tag selection on Home screen
Modified Blog display based on Tag selection on Home screen
 - Hide Blogs related to unselected Tags

--- a/Wkkim.Blog.Web/Views/AdminBlogPosts/Edit.cshtml
+++ b/Wkkim.Blog.Web/Views/AdminBlogPosts/Edit.cshtml
@@ -124,7 +124,9 @@
                     'Aceept': '*/*',
                 },
                 body: data
-            }).then(response => response.json())
+            }).then(response => 
+                response.json()
+            )
                 .then(result => {
                     featuredImageUrlElement.value = result.link;
                     featuredImageDisplayElement.src = result.link;
