--- a/Wkkim.Blog.Web/Views/Home/Index.cshtml
+++ b/Wkkim.Blog.Web/Views/Home/Index.cshtml
@@ -3,8 +3,14 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<div class="container col-xxl-8 px-4 py-5">
-    <div class="row align-items-center g-5 py-5">
+<div class="container col-xxl-8 px-0 py-2">
+    <div class="m-0 py-0 border-0">
+        <img src="./image/c-sharp-c.svg" width="50px"></img>
+        <img src="./image/sql-database-sql-azure.svg" width="50px"></img>
+        <img src="./image/python.svg" width="50px"></img>
+        <img src="./image/artificial-intelligence.svg" width="50px"></img>
+    </div>
+    <div class="row align-items-center g-5 px-3 py-2">
         <div class="col-12 col-lg-15">
             <h1 class="display-5 fw-bold lh-1 mb-3">
                 Adaptable Developer WoongKeol Kim
