--- a/Wkkim.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Wkkim.Blog.Web/Views/Shared/_Layout.cshtml
@@ -17,9 +17,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow ">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow px-0">
+            <div class="container px-0">
+                <a class="navbar-brand px-0" asp-area="" asp-controller="Home" asp-action="Index">
                     <div>
                         <fiv class="row">
                             <h4 >
@@ -89,6 +89,7 @@
 
                     </div>
                 </div>
+
             </div>
         </nav>
     </header>
