--- a/Wkkim.Blog.Web/Views/Home/Index.cshtml
+++ b/Wkkim.Blog.Web/Views/Home/Index.cshtml
@@ -3,18 +3,30 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<div class="container col-xxl-8 px-0 py-2">
-    <div class="m-0 py-0 border-0">
-        <img src="./image/c-sharp-c.svg" width="50px"></img>
-        <img src="./image/sql-database-sql-azure.svg" width="50px"></img>
-        <img src="./image/python.svg" width="50px"></img>
-        <img src="./image/artificial-intelligence.svg" width="50px"></img>
+<div class="container col-xxl-12 px-0 py-2">
+
+    <div class="col-12 col-lg-15">
+        <img src="https://images.pexels.com/photos/196655/pexels-photo-196655.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Alternate Text"
+             class="d-block mx-lg-auto img-fluid" width="80%" />
+
     </div>
     <div class="row align-items-center g-5 px-3 py-2">
-        <div class="col-12 col-lg-15">
+        <div class="col-12 col-lg-15" >
+            <h4 style="text-align:center; font-size:20px">
+                I am a developer who has demonstrated excellent performance across various development environments, including C#, Python, and SQL.
+            </h4>
+            <h4 style="text-align:center; font-size:20px">
+                Through this blog, I would like to introduce myself.
+            </h4>
+        </div>
+
+    </div>
+    @* <div class="row align-items-center g-5 px-3 py-2">
+        <div class="col-12 col-lg-15" >
             <h1 class="display-5 fw-bold lh-1 mb-3">
                 Adaptable Developer WoongKeol Kim
             </h1>
+
             <p class="lead">
                 A developer capable of expanding my personal skills to meet diverse environments and requirements.
                 Depending on the project's needs, Proficient in using various tools, including C#, SQL, DevExpress, and Python.
@@ -26,12 +38,7 @@
             </p>
         </div>
 
-        <div class="col-12 col-lg-6">
-            <img src="https://images.pexels.com/photos/196655/pexels-photo-196655.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Alternate Text"
-                 class="d-block mx-lg-auto img-fluid" width="600" />
-
-        </div>
-    </div>
+    </div> *@
 </div>
 
 <form class="container">
