--- a/Wkkim.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Wkkim.Blog.Web/Views/Shared/_Layout.cshtml
@@ -10,9 +10,30 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Wkkim.Blog.Web.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link href='https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css' rel='stylesheet'  />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"/>
+    <style>
+        .grid-container {
+            display: grid;
+            grid-template-rows: auto auto;
+            gap: 10px;
+        }
 
-    <link href='https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
+        .grid-item {
+            text-align: center;
+            color:aliceblue;
+        }
+
+        .image-container {
+            display: flex;
+        }
+
+            .image-container img {
+                width: 30px;
+                margin-right:15px;
+            }
+
+    </style>
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js'></script>
 </head>
 <body>
@@ -20,17 +41,15 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow px-0">
             <div class="container px-0">
                 <a class="navbar-brand px-0" asp-area="" asp-controller="Home" asp-action="Index">
-                    <div>
-                        <fiv class="row">
-                            <h4 >
-                                WoongKeol Kim
-                            </h4>
-                        </fiv>
-                        <fiv class="row">
-                            <h5 class="font-monospace ">
-                                .Net Developer
-                            </h5>
-                        </fiv>
+                    <div class="grid-container">
+                        <div class="grid-item">
+                            <h1>WoongKeol Kim</h1>
+                        </div>
+                        <div class="grid-item image-container">
+                            <img src="/image/c-sharp-c.svg" alt="Image 1">
+                            <img src="/image/python.svg" alt="Image 2">
+                            <img src="/image/sql-database-generic.svg" alt="Image 3">
+                        </div>
                     </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -39,10 +58,45 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+@* 
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                C#
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index_Winform">Winform</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">WPF</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPosts" asp-action="Add">ASP.NET</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPosts" asp-action="Add">DevExpress</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Python
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Projects</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">Personal WebSite</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPosts" asp-action="Add">Blog</a></li>
+                            </ul>
                         </li>
 
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                AI
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 1</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 2</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 3</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 4</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 5</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 6</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 7</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Module 8</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Master's Paper'</a></li>
+                            </ul>
+                        </li> *@
                         @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                         {
                                 <li class="nav-item dropdown">
