--- a/Wkkim.Blog.Web/Views/Home/Index.cshtml
+++ b/Wkkim.Blog.Web/Views/Home/Index.cshtml
@@ -3,23 +3,25 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<div class="container col-xxl-12 px-0 py-2">
+<div>
 
-    <div class="col-12 col-lg-15">
-        <img src="https://images.pexels.com/photos/196655/pexels-photo-196655.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Alternate Text"
-             class="d-block mx-lg-auto img-fluid" width="80%" />
+    <div style="margin:0;">
+        <img src="/image/bg-with-text.png" alt="Alternate Text"
+             class="px-0 py-0" style="width:100%;"/>
 
     </div>
-    <div class="row align-items-center g-5 px-3 py-2">
-        <div class="col-12 col-lg-15" >
-            <h4 style="text-align:center; font-size:20px">
-                I am a developer who has demonstrated excellent performance across various development environments, including C#, Python, and SQL.
-            </h4>
-            <h4 style="text-align:center; font-size:20px">
-                Through this blog, I would like to introduce myself.
-            </h4>
-        </div>
+    <div class="container col-xxl-12 px-0 py-0">
+        <div class="row align-items-center g-5 px-3 py-2">
+            <div class="col-12 col-lg-15">
+                <h4 style="text-align:center; font-size:20px">
+                    I am a developer who has demonstrated excellent performance across various development environments, including C#, Python, and SQL.
+                </h4>
+                <h4 style="text-align:center; font-size:20px">
+                    Through this blog, I would like to introduce myself.
+                </h4>
+            </div>
 
+        </div>
     </div>
     @* <div class="row align-items-center g-5 px-3 py-2">
         <div class="col-12 col-lg-15" >
