--- a/Wkkim.Blog.Web/wwwroot/css/site.css
+++ b/Wkkim.Blog.Web/wwwroot/css/site.css
@@ -22,7 +22,7 @@ body {
 }
 /* Style the button that is used to open and close the collapsible content */
 .collapsible {
-    background-color: #eee;
+    background-color: #3795BD;
     color: #444;
     cursor: pointer;
     padding: 0px;
@@ -35,7 +35,8 @@ body {
 
     /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
     .active, .collapsible:hover {
-        background-color: #ccc;
+        background-color: #4E31AA;
+        color: #F7F7F8;
     }
 
 /* Style the collapsible content. Note: hidden by default */
