--- a/Wkkim.Blog.Web/wwwroot/css/site.css
+++ b/Wkkim.Blog.Web/wwwroot/css/site.css
@@ -44,5 +44,5 @@ body {
     padding: 0 18px;
     display: none;
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: #F7F7F8;
 }
